--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -9,10 +9,11 @@ GOV.UK Prototype Kit
       Case access prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (28/07/21)
+      Last updated (29/07/21)
     </h2>
     <p class="govuk-body-l">Page widths have been increased to new wider width.<br><span style="color: red">Email confirmations removed & pending reinstated</span></p>
-    <p class="govuk-body-l">To be updated 29/7 - Staff - which include both Date created & Priority column (3.4)</p>
+      <p class="govuk-body-l">Judiciary pages updatd with 'Task created' column (3.4)</p>
+    <p class="govuk-body-l">Staff pages updatd with 'Due date' & 'Priority' column (3.4)</p>
     <div style="display: flex; margin-top: 80px;">
       <div style="width: 800px;">
 
@@ -22,7 +23,7 @@ GOV.UK Prototype Kit
         <h2 class="govuk-heading-m">(USER) Challenged access request</h2>
         <h3 class="govuk-heading-s">Scenario A - Search for and Challenged Access to case</h3>
         <p><a target="_blank" href="/caseaccess/pages/results?usertype=judiciary&">Search - entry</a><br></p>
-        <p><a target="_blank" href="/caseaccess/pages/mywork-c?usertype=judiciary&">My work - entry</a><br>Case reference search from header</p>
+        <p><a target="_blank" href="/caseaccess/pages/mywork-c?usertype=judiciary&">My work - entry</a><br>Case reference search from header<br> (UPDATED WITH LATEST 3.4 WA DESIGN)</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018?usertype=judiciary&">Case details</a><br>Challanged access - Flow request</br></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request?usertype=judiciary&">Request access</a><br>Challanged access - Flow request</br></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request-error?usertype=judiciary&">Request access error no selection</a><br>Challanged access - Flow request error</br></p>
@@ -37,7 +38,7 @@ GOV.UK Prototype Kit
         <h2 class="govuk-heading-m">(USER) specific access request</h2>
         <h3 class="govuk-heading-s">Scenario B - Search for and Request Specific Access to case</h3>
         <p><a target="_blank" href="/caseaccess/pages/results-s2?usertype=judiciary&">Search - entry</a><br></p>
-        <p><a target="_blank" href="/caseaccess/pages/mywork?usertype=judiciary&">My work - entry</a><br>Case reference search from header</p>
+        <p><a target="_blank" href="/caseaccess/pages/mywork?usertype=judiciary&">My work - entry</a><br>Case reference search from header<br> (UPDATED WITH LATEST 3.4 WA DESIGN)</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017?usertype=judiciary&">Case details</a><br>specific access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request?usertype=judiciary&">Request access</a><br>specific access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request-error?usertype=judiciary&">Request access error</a><br>specific access - Flow request error</br></p>
@@ -156,7 +157,7 @@ GOV.UK Prototype Kit
           <h2 class="govuk-heading-m">(USER) Challenged access request</h2>
           <h3 class="govuk-heading-s">Scenario A - Search for and Challenged Access to case</h3>
           <p><a target="_blank" href="/caseaccess/pages/results?usertype=staff&">Search - entry</a><br></p>
-          <p><a target="_blank" href="/caseaccess/pages/mywork-c?usertype=staff&">My work - entry</a><br>Case reference search from header</p>
+          <p><a target="_blank" href="/caseaccess/pages/mywork-c-staff?usertype=staff&">My work - entry</a><br>Case reference search from header<br> (NEW PAGE - UPDATED WITH LATEST 3.4 WA DESIGN)</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018?usertype=staff&">Case details</a><br>Challanged access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request?usertype=staff&">Request access</a><br>Challanged access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request-error?usertype=staff&">Request access error no selection</a><br>Challanged access - Flow request error</br></p>
@@ -172,7 +173,7 @@ GOV.UK Prototype Kit
           <h2 class="govuk-heading-m">(USER) specific access request</h2>
           <h3 class="govuk-heading-s">Scenario B - Search for and Request Specific Access to case</h3>
           <p><a target="_blank" href="/caseaccess/pages/results-s2?usertype=staff&">Search - entry</a><br></p>
-          <p><a target="_blank" href="/caseaccess/pages/mywork?usertype=staff&">My work - entry</a><br>Case reference search from header</p>
+          <p><a target="_blank" href="/caseaccess/pages/mywork-staff?usertype=staff&">My work - entry</a><br>Case reference search from header<br> (NEW PAGE - UPDATED WITH LATEST 3.4 WA DESIGN)</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017?usertype=staff&">Case details</a><br>specific access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request?usertype=staff&">Request access</a><br>specific access - Flow request</br></p>
             <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request-error?usertype=staff&">Request access error</a><br>specific access - Flow request error</br></p>
@@ -189,9 +190,9 @@ GOV.UK Prototype Kit
 
           <h2 class="govuk-heading-m">(APPROVER) Approve specific access request <br> from AVAILABLE TASKS</h2>
           <h3 class="govuk-heading-s">Scenario C - Part 1a - Grant request Specific Access to case</h3>
-          <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2-staff?usertype=staff&">Available tasks</a><br>specific access - Flow approve<br>(UPDATED WITH LATEST 3.4 WA DESIGN)</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Active tasks</a><br>Assign to me - specific access - Flow approve<br>(TO BE UPDATED to 3.4)</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=staff&">Assigned</a><br>specific access - Flow approve<br>(TO BE UPDATED to 3.4)</p>
+          <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2-staff?usertype=staff&">Available tasks</a><br>specific access - Flow approve<br> (NEW PAGE - UPDATED WITH LATEST 3.4 WA DESIGN)</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t-staff?usertype=staff&">Active tasks</a><br>Assign to me - specific access - Flow approve<br> (NEW PAGE - UPDATED WITH LATEST 3.4 WA DESIGN)</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta-staff?usertype=staff&">Assigned</a><br>specific access - Flow approve<br> (NEW PAGE - UPDATED WITH LATEST 3.4 WA DESIGN)</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=staff&"">Review specific access request</a><br>specific access - Flow approve</p>
               <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case-error?usertype=staff&">Review specific access request error</a><br>specific access - error</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=staff&">Grant duration of case access
@@ -205,15 +206,15 @@ GOV.UK Prototype Kit
           <h3 class="govuk-heading-s">Scenario C - Part 1b - Grant request Specific Access to case</h3>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-a?usertype=staff&">Case view - Overview</a><br>specific access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ar?usertype=staff&">Case view - Role / access</a><br>specific access - Flow approve</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Case view - Tasks</a><br>specific access - Flow approve<br>(TO BE UPDATED to 3.4)</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=staff&">Case view - assigned yourself a task</a><br>specific access - Flow approve<br>(TO BE UPDATED to 3.4)</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t-staff?usertype=staff&">Case view - Tasks</a><br>specific access - Flow approve<br> (NEW PAGE - UPDATED WITH LATEST 3.4 WA DESIGN</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta-staff?usertype=staff&">Case view - assigned yourself a task</a><br>specific access - Flow approve<br> (NEW PAGE - UPDATED WITH LATEST 3.4 WA DESIGN)</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=staff&">Case view - Review specific access request</a><br>specific access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case-error?usertype=staff&">Case view - Review specific access request error</a><br>specific access - error</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=staff&">Case view - Grant duration of case access
             </a><br>specific access - Flow approve</p>
             <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case-error?usertype=staff&">Grant duration of case access error</a><br>specific access - error</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=staff&">Case view - Access approved</a><br>specific access - Flow approve<br><span style="color: red">*Reinstated</span></p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=staff&">Case view - Tasks</a><br>specific access - Flow approve<br>(TO BE UPDATED to 3.4)</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca-staff?usertype=staff&">Case view - Tasks</a><br>specific access - Flow approve<br> (NEW PAGE - UPDATED WITH LATEST 3.4 WA DESIGN)</p>
           <!--    <p><a target="_blank" href="/caseaccess/pages/email-approved">Email notifcation - Task Approved</a></p> -->
 
           <!-- SECTION BREAK -->
@@ -233,7 +234,7 @@ GOV.UK Prototype Kit
 
           <h2 class="govuk-heading-m">(APPROVER) Reject specific access request<br> from AVAILABE TASKS</h2>
           <h3 class="govuk-heading-s">Scenario D (a) - Reject specific access to case </h3>
-          <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=staff&">Available tasks</a><br>specific access - Flow rejected<br>(TO BE UPDATED to 3.4)</p>
+          <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2-staff?usertype=staff&">Available tasks</a><br>specific access - Flow rejected<br> (NEW PAGE - UPDATED WITH LATEST 3.4 WA DESIGN)</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr?usertype=staff&">Review specific access request</a><br>specific access - Flow rejected</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=staff&">Reject specific access request - request more information
             </a><br>specific access - Flow rejected</p>
@@ -248,14 +249,14 @@ GOV.UK Prototype Kit
           <h3 class="govuk-heading-s">Scenario D (b) - Reject specific access to case</h3>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-a?usertype=staff&">Case view - Overview</a><br>specific access - Flow reject</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ar?usertype=staff&">Case view - Role / access</a><br>specific access - Flow reject</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Case view - Tasks</a><br>specific access - Flow reject<br>(TO BE UPDATED to 3.4)</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t-staff?usertype=staff&">Case view - Tasks</a><br>specific access - Flow reject<br> (NEW PAGE - UPDATED WITH LATEST 3.4 WA DESIGN)</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=staff&">Case view - Review specific access request</a><br>specific access - Flow reject</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-case?usertype=staff&">Case view - Reject specific access request - request more information
             </a><br>specific access - Flow reject</p>
             <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-case-error?usertype=staff&">Reject specific access request - request more information error
               </a><br>specific access - error</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc-case?usertype=staff&">Case view - Access denied</a><br>specific access - Flow reject<br><span style="color: red">*Reinstated</span></p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=staff&">Case view - Tasks</a><br>specific access - Flow rejected<br>(TO BE UPDATED to 3.4)</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca-staff?usertype=staff&">Case view - Tasks</a><br>specific access - Flow rejected<br> (NEW PAGE - UPDATED WITH LATEST 3.4 WA DESIGN)</p>
 
           <!-- SECTION BREAK -->
 
@@ -273,7 +274,7 @@ GOV.UK Prototype Kit
 
           <h3 class="govuk-heading-s">Scenario E - Booking UI</h3>
       <!--    <p><a target="_blank" href="/caseaccess/pages/booking-sel?usertype=staff&">Pre Booking UI</a><br>Pre selection service</br></p> -->
-          <p><a target="_blank" href="/caseaccess/pages/booking?usertype=staff&">Booking UI</a><br>Select type of access<br>(TO BE UPDATED to 3.4)</p>
+          <p><a target="_blank" href="/caseaccess/pages/booking-staff?usertype=staff&">Booking UI</a><br>Select type of access<br> (NEW PAGE - UPDATED WITH LATEST 3.4 WA DESIGN)</p>
         <!--  <p><a target="_blank" href="/caseaccess/pages/booking-location?usertype=staff&">Booking UI - location</a><br>Select location- Subject to change</br></p> -->
       <!--    <p><a target="_blank" href="/caseaccess/pages/booking-rtn?usertype=staff&">Booking UI</a><br>Return post logout - single</br></p> -->
       <!--         <p><a target="_blank" href="/caseaccess/pages/booking-rtn-multi?usertype=staff&">Booking UI</a><br>Return post logout - multi</br></p>
