--- a/app/views/caseaccess/pages/available-tasks-c.html
+++ b/app/views/caseaccess/pages/available-tasks-c.html
@@ -52,70 +52,58 @@ My work
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
             <th scope="col" class="govuk-table__header"></th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 420px;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Date</button></th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Task created</button></th>
     <!--  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th> -->
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 130px;" aria-sort="none"><a href="#"></a></th>
             </tr>
         </thead>
             <tbody class="govuk-table__body">
-                <tr class="govuk-table__row">
+              <tr class="govuk-table__row">
 
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lacey-May Sanders</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lacey-May Sanders</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
+                  <td class="govuk-table__cell">{{ now |  date("add", 0, "day") | date( "D MMMM YYYY" ) }}</td>
+                <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
+                  <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+              </tr>
+              <tr class="govuk-table__row">
+
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Olivia-Rose Olsen</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
-                    <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--red"
-})}} </td>
-                  <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
-                    <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-                </tr>
-                <tr class="govuk-table__row">
+                  <td class="govuk-table__cell">{{ now |  date("subtract", 1, "day") | date( "D MMMM YYYY" ) }} </td>
+                <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
+                  <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+              </tr>
+              <tr class="govuk-table__row">
 
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Olivia-Rose Olsen</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
-                    <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--yellow"
-})}} </td>
-                  <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
-                    <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-                </tr>
-                <tr class="govuk-table__row">
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">John Pickering</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">EEA</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path style="fill: black">
+                  <title>This case has more than one task. Review needed.</title><path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
+                  C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" /></svg></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Create case summary</td>
+                  <td class="govuk-table__cell">{{ now |  date("subtract", 6, "day") | date( "D MMMM YYYY" ) }} </td>
+                <!--  <td class="govuk-table__cell">N/A</td> -->
+                  <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+              </tr>
+              <tr class="govuk-table__row">
 
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">John Pickering</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">EEA</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path style="fill: black">
-                    <title>This case has more than one task. Review needed.</title><path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
-                    C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" /></svg></td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Create case summary</td>
-                    <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--yellow"
-})}} </td>
-                  <!--  <td class="govuk-table__cell">N/A</td> -->
-                    <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-                </tr>
-                <tr class="govuk-table__row">
-
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Neha Venkatanarasimharaj</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
-                    <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-                  <!--  <td class="govuk-table__cell">N/A</td> -->
-                    <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-                </tr>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Neha Venkatanarasimharaj</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
+                  <td class="govuk-table__cell">{{ now |  date("subtract", 6, "day") | date( "D MMMM YYYY" ) }}  </td>
+                <!--  <td class="govuk-table__cell">N/A</td> -->
+                  <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+              </tr>
             </tbody>
         </table>
 {% endblock %}
