--- a/app/views/caseaccess/pages/mywork-c-staff.html
+++ b/app/views/caseaccess/pages/mywork-c-staff.html
@@ -22,17 +22,17 @@ My work
         <nav class="hmcts-sub-navigation">
           <ul class="hmcts-sub-navigation__list">
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" aria-current="page" href="mywork-c">
+              <a class="hmcts-sub-navigation__link" aria-current="page" href="mywork-c-staff">
                 My tasks
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="available-tasks-c">
+              <a class="hmcts-sub-navigation__link" href="available-tasks-c-staff">
                 Available tasks
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="mycases-c">
+              <a class="hmcts-sub-navigation__link" href="mycases-c-staff">
                 My cases
               </a>
             </li>
@@ -47,13 +47,13 @@ My work
                     <table class="govuk-table ">
                         <thead class="govuk-table__head">
                           <tr class="govuk-table__row">
-                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 405px;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
-                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 400px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
+                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
+                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
+                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
                               <th scope="col" class="govuk-table__header"></th>
-                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 420px;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
-                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Task created</button></th>
-<!--  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th> -->
+                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
+                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Due date</button></th>
+                                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Priority</button></th>
                               <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 130px;" aria-sort="none"><a href="#"></a></th>
                           </tr>
                         </thead>
@@ -64,8 +64,11 @@ My work
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review respondent evidence</a></td>
-                                  <td class="govuk-table__cell"> {{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}</td>
-                              <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
+                                <td class="govuk-table__cell">{{ now |  date("add", 0, "day") | date( "D MMMM YYYY" ) }}</td>
+                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >    {{govukTag({
+                                    text: "medium",
+                                    classes: "govuk-tag--yellow"
+                                  })}}</td>
                                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                             </tr>
                             <tr class="govuk-table__row">
@@ -76,8 +79,11 @@ My work
                                 <title>This case has more than one task. Review needed.</title><path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
                                 C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" /></svg></td>
                                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review appellant case</a></td>
-                                  <td class="govuk-table__cell">{{ now |  date("subtract", 1, "day") | date( "D MMMM YYYY" ) }} </td>
-                            <!--    <td class="govuk-table__cell">N/A<a href="#"></a></td> -->
+                                  <td class="govuk-table__cell">{{ now |  date("subtract", 1, "day") | date( "D MMMM YYYY" ) }}</td>
+                                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >    {{govukTag({
+                                      text: "high",
+                                      classes: "govuk-tag--red"
+                                    })}}</td>
                                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                             </tr>
                         </tbody>
